--- a/low-rank-mechanism/Hopfieldmodel.ipynb
+++ b/low-rank-mechanism/Hopfieldmodel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean m: [-0.70710678 -0.70710678  0.70710678  0.70710678]\n",
+      "mean m2: [ 0.70710678 -0.70710678 -0.70710678  0.70710678]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('mean m:',mstats[0,:,0])\n",
+    "print('mean m2:',mstats[1,:,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
